menu logo out of container fixed

--- a/src/components/manager/menu/menu.module.css
+++ b/src/components/manager/menu/menu.module.css
@@ -11,6 +11,7 @@
 
 .container a {
   height: max-content;
+  width: max-content;
 }
 
 .menu {
