--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -12,6 +12,7 @@
 
 .container a {
  height: max-content;
+ width: max-content;
 }
 
 .menu {
